manifests/blue-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: blue-deployment

spec:
  replicas: 1

  selector:
    matchLabels:
      app: gb-app
      version: blue

  template:
    metadata:
      labels:
        app: gb-app
        version: blue

    spec:
      containers:
      - name: blue
        image: gb-app:v1

        ports:
        - containerPort: 5000
