manifests/blue-rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout 

metadata:
  name: blue-deployment

spec:
  replicas: 3 

  strategy:
    blueGreen:
      activeService: blue-service

  selector:
    matchLabels:
      app: gb-app
      version: blue

  template:
    metadata:
      labels:
        app: gb-app
        version: blue

    spec:
      containers:
      - name: blue
        image: gb-app:v3

        imagePullPolicy: Never

        resources:
          requests:
            memory: "64Mi"
            cpu: "100m"

          limits:
            memory: "128Mi"
            cpu: "250m"
        
        ports:
        - containerPort: 5000
