manifests/green-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: green-deployment

spec:
  replicas: 1

  selector:
    matchLabels:
      app: gb-app
      version: green

  template:
    metadata:
      labels:
        app: gb-app
        version: green

    spec:
      containers:
      - name: green
        image: gb-app:v1

        imagePullPolicy: Never

        ports:
        - containerPort: 5000
