manifests/blue-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: blue-service

spec:
  selector:
    app: gb-app
    version: blue

  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000

  type: ClusterIP
