manifests/green-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: green-service

spec:
  selector:
    app: gb-app
    version: green

  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000

  type: ClusterIP
