manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: gb-ingress

spec:
 rules:
 - host: gb.local
   http:
     paths:
     - path: /blue
       pathType: Prefix
       backend:
         service:
           name: blue-service
           port:
             number: 80

     - path: /green
       pathType: Prefix
       backend:
         service:
           name: green-service
           port:
             number: 80
